--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	"prefer-stable": true,
 	"require": {
 		"php": ">=5.3.0",
-		"ppp/data-model": "*"
+		"ppp/data-model": "dev-normalization"
 	},
 	"autoload": {
 		"psr-4": {
